manifests/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: tracker
  labels:
    app: tracker 
spec:
  replicas: 3
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 8
  selector:
    matchLabels:
      app: tracker
  template:
    metadata:
      labels:
        app: tracker 
    spec:
      containers:
        - name: test
          image: akstestsela.azurecr.io/image-workflow-1718894485555:latest


---


kind: Service
apiVersion: v1
metadata:
  name: tracker-service
spec:
  selector:
    app: tracker
  ports:
    - port: 5678 
      targetPort: 8080
